--- a/examples/hello-world-reactive/pom.xml
+++ b/examples/hello-world-reactive/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>io.github.jabrena</groupId>
 		<artifactId>examples</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
+		<version>0.2.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>io.github.jabrena</groupId>
 	<artifactId>hello-world-reactive</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<name>hello-world-reactive</name>
 	<description>Demo project for Spring Boot</description>
 	<packaging>jar</packaging>
@@ -61,6 +61,14 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>3.1.1</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
