--- a/examples/hello-world-servlet/pom.xml
+++ b/examples/hello-world-servlet/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>io.github.jabrena</groupId>
 		<artifactId>examples</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
+		<version>0.2.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>io.github.jabrena</groupId>
 	<artifactId>hello-world-servlet</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.2.0-SNAPSHOT</version>
 	<name>hello-world-servlet</name>
 	<description>Demo project for Spring Boot</description>
 	<packaging>jar</packaging>
@@ -19,6 +19,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<mainClass>com.example.demo.DemoApplication</mainClass>
+		<enforcer.skip>true</enforcer.skip>
 	</properties>
 
 	<dependencies>
@@ -38,9 +39,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>io.github.jabrena</groupId>
+			<groupId>com.github.jabrena.spring-boot-user-beans</groupId>
 			<artifactId>spring-boot-starter-user-beans</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>v0.1.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
@@ -61,6 +62,21 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>3.1.1</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
+
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
 </project>
