--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -7,12 +7,12 @@
 	<parent>
 		<groupId>io.github.jabrena</groupId>
 		<artifactId>spring-boot-user-beans</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
+		<version>0.2.0-SNAPSHOT</version>
 	</parent>
 
     <groupId>io.github.jabrena</groupId>
     <artifactId>examples</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>examples</name>
 
@@ -20,5 +20,18 @@
         <module>hello-world-servlet</module>
         <module>hello-world-reactive</module>
     </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.1.1</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
